# random

./: .gitignore
AoC2022/01/: 01.go  02.go
AoC2022/02/: 1.go  2.go
AoC2022/d03/: Cargo.toml
AoC2022/d13/: Cargo.toml  main.py
AoC2022/d15/: Cargo.toml  part2
asgo/: Readme.md  go.mod
blockchain/simple_blockchain/: Cargo.toml
blockchain/simple_blockchain/src/: main.rs
distributed_scraper/: README.md  docker-compose.yml  minikube_deploy.ps1
distributed_scraper/k8s/: deployment-master.yaml  deployment-slave.yaml
distributed_scraper/master/: Dockerfile  main.py  requirements.txt
distributed_scraper/slave/: requirements.txt
eks_distributed_scraper/: README.md  minikube_deploy.ps1  minikube_deploy.sh
eks_distributed_scraper/cloud/: main.tf  provider.tf  variables.tf
eks_distributed_scraper/k8s/: deployment-master.yaml  deployment-rabbitmq.yaml  deployment-slave.yaml
eks_distributed_scraper/master/: Dockerfile  main.py  requirements.txt
eks_distributed_scraper/slave/: Dockerfile  main.py  requirements.txt
grpc_demo/: go.mod  grpcurl.sh  notes.md
grpc_demo/go/: gen_proto.sh
grpc_demo/proto/: demo.proto
grpc_demo/python/: client.py  demo_pb2.py  demo_pb2.pyi  (+3 more)
grpc_demo/rust/: Cargo.toml  build.rs
grpc_demo/rust/src/: client.rs  server.rs
grpc_demo_go/: test.pb.go  test.proto  test_grpc.pb.go
homelab/: Readme.md  hosts_template  kubectl-get-all.sh  main.yml  provision_ssh_keys.yml
masscan_go/: Readme.md  dev-APIs-outputs.json  go.mod  go.sum  main.go  main_test.go  notes.md
static_webpage/: index.html  srcery_css.css  style.css
(+43 files in other folders)
