[package]
name = "simple_blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
data-encoding = "2.3"
time = "0.3"
owo-colors = "3"
k256 = "0.11"
generic-array = "0.14"