[package]
name = "grpc_demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.8.3"
prost = "0.11.3"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8.3"
